# ncs-ble-fw-template

./: CMakeLists.txt  README.md  west.yml
.github/: Dockerfile
.github/workflows/: build.yml  custom-docker-image-build.yml  custom-docker-image.yml
app/: CMakeLists.txt  app.overlay  prj.conf
app/configuration/nrf52833dk_nrf52833/: pm_static.yml
app/src/: main.c
boards/arm/raytac_mdbt50q_db_20_nrf52820/: Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  raytac_mdbt50q_db_20_nrf52820-pinctrl.dtsi  raytac_mdbt50q_db_20_nrf52820.dts  raytac_mdbt50q_db_20_nrf52820.yaml  raytac_mdbt50q_db_20_nrf52820_defconfig
tests/ble/: README.md  __main__.py  constants.py  test.py
